--- a/frontend/app.json
+++ b/frontend/app.json
@@ -27,6 +27,9 @@
     },
     "extra": {
       "API_URL": "http://192.168.1.5:4000/api"
-    }
+    },
+    "plugins": [
+      "expo-secure-store"
+    ]
   }
 }
