--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,34 +9,31 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/metro-runtime": "^5.0.4",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.3.14",
     "@react-navigation/drawer": "^7.4.1",
     "@react-navigation/native": "^7.1.10",
-    "@react-navigation/native-stack": "^7.3.14",
     "@react-navigation/stack": "^7.3.3",
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.9.0",
     "expo": "~53.0.9",
-    "expo-constants": "^17.1.6",
-    "expo-image-picker": "^16.1.4",
-    "expo-linear-gradient": "^14.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.4",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
-    "lodash": "^4.17.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-chart-kit": "^6.12.0",
-    "react-native-gesture-handler": "~2.20.2",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "^5.4.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "^15.12.0",
+    "react-native-gesture-handler": "~2.24.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "^5.4.1",
+    "react-native-screens": "~4.10.0",
+    "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
-    "react-native-web": "^0.19.12",
     "react-redux": "^9.2.0",
-    "victory-native": "^41.17.3"
+    "react-dom": "19.0.0",
+    "react-native-web": "^0.20.0",
+    "@expo/metro-runtime": "~5.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
