--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,12 +18,14 @@
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
     "expo": "~53.0.9",
+    "expo-background-fetch": "^13.1.5",
     "expo-constants": "~17.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-location": "^18.1.5",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
+    "expo-task-manager": "^13.1.5",
     "lucide-react": "^0.515.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -36,7 +38,8 @@
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
