--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "^13.1.5",
     "lucide-react": "^0.515.0",
+    "moment": "^2.30.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -43,6 +44,7 @@
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
+    "react-native-webview": "^13.15.0",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.3"
   },
