--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,8 @@
     "expo-linear-gradient": "~14.1.4",
     "expo-location": "^18.1.5",
     "expo-maps": "^0.11.0",
+    "expo-media-library": "^17.1.7",
+    "expo-print": "^14.1.4",
     "expo-secure-store": "~14.2.3",
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "^13.1.5",
