--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.10.0",
     "expo": "~53.0.9",
     "expo-background-fetch": "^13.1.5",
+    "expo-calendar": "^14.1.4",
     "expo-constants": "~17.1.6",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
