--- a/web/package.json
+++ b/web/package.json
@@ -31,15 +31,15 @@
     "expo-media-library": "^17.1.7",
     "expo-print": "^14.1.4",
     "expo-secure-store": "~14.2.3",
-    "expo-sharing": "^13.1.5",
     "expo-status-bar": "~2.2.3",
     "expo-task-manager": "^13.1.5",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.515.0",
     "moment": "^2.30.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-leaflet": "^5.0.0",
     "react-native": "0.79.2",
-    "react-native-calendars": "^1.1313.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
