--- a/web/package.json
+++ b/web/package.json
@@ -49,7 +49,8 @@
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "^13.15.0",
+    "react-native-web-webview": "^1.0.2",
+    "react-native-webview": "13.13.5",
     "react-redux": "^9.2.0",
     "recharts": "^2.15.3"
   },
